discussion/kv_engine/170541/170541_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-14 20:54:35.000000000
Message: 
Uploaded patch set 16: Patch Set 15 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 21:34:12.000000000
Message: 
Patch Set 16: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15614/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15614/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15614/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43927/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/0.cancel_can_schedule":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/0.cancel_can_schedule
unknown file: error: C++ exception with description "ExecutorPool::get(): Pool not created" thrown in TearDown().
[  FAILED  ] ExecutorPoolEpEngineTest/0.cancel_can_schedule, where TypeParam = class TestExecutorPool (95 ms)
ExecutorPoolEpEngineTest/0.cancel_can_schedule
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43927/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18393/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/1.cancel_can_schedule":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/1.cancel_can_schedule
[2022-02-14T21:21:56.721Z] unknown file: Failure
[2022-02-14T21:21:56.721Z] C++ exception with description "ExecutorPool::get(): Pool not created" thrown in TearDown().
[2022-02-14T21:21:56.721Z] [  FAILED  ] ExecutorPoolEpEngineTest/1.cancel_can_schedule, where TypeParam = FollyExecutorPool (145 ms)
ExecutorPoolEpEngineTest/1.cancel_can_schedule
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18393/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17663/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/1.cancel_can_schedule":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/1.cancel_can_schedule
[2022-02-14T21:15:07.425Z] unknown file: Failure
[2022-02-14T21:15:07.425Z] C++ exception with description "ExecutorPool::get(): Pool not created" thrown in TearDown().
[2022-02-14T21:15:07.425Z] [  FAILED  ] ExecutorPoolEpEngineTest/1.cancel_can_schedule, where TypeParam = FollyExecutorPool (27 ms)
ExecutorPoolEpEngineTest/1.cancel_can_schedule
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17663/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16430/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/0.cancel_can_schedule":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/0.cancel_can_schedule
[2022-02-14T21:06:41.113Z] unknown file: Failure
[2022-02-14T21:06:41.113Z] C++ exception with description "ExecutorPool::get(): Pool not created" thrown in TearDown().
[2022-02-14T21:06:41.113Z] [  FAILED  ] ExecutorPoolEpEngineTest/0.cancel_can_schedule, where TypeParam = TestExecutorPool (6 ms)
ExecutorPoolEpEngineTest/0.cancel_can_schedule
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16430/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25760/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5322/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/0.cancel_can_schedule":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/0.cancel_can_schedule
[2022-02-14T21:27:16.694Z] unknown file: Failure
[2022-02-14T21:27:16.694Z] C++ exception with description "ExecutorPool::get(): Pool not created" thrown in TearDown().
[2022-02-14T21:27:16.694Z] [  FAILED  ] ExecutorPoolEpEngineTest/0.cancel_can_schedule, where TypeParam = TestExecutorPool (4 ms)
ExecutorPoolEpEngineTest/0.cancel_can_schedule
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5322/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17359/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/1.cancel_can_schedule":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/1.cancel_can_schedule
[2022-02-14T21:23:38.824Z] unknown file: Failure
[2022-02-14T21:23:38.824Z] C++ exception with description "ExecutorPool::get(): Pool not created" thrown in TearDown().
[2022-02-14T21:23:38.824Z] [  FAILED  ] ExecutorPoolEpEngineTest/1.cancel_can_schedule, where TypeParam = FollyExecutorPool (33 ms)
ExecutorPoolEpEngineTest/1.cancel_can_schedule
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17359/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14456/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37041/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5261/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
